Mon May 21 16:24:40 2012  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c (mSyslog_inspect): Use rb_sprintf().

	* ext/syslog/syslog.c (mSyslog_inspect): Make sure self is a
	  module before calling rb_class2name().

Sat May 19 14:42:37 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/drb/drbtest.rb ({DRbCore,DRbAry}#teardown}: cannot pass SIGTERM
	  to another process on Windows, so use SIGINT instead.

Sat May 19 14:42:20 2012  Tanaka Akira  <akr@fsij.org>

	* lib/drb/ssl.rb: generate 1024 bits RSA key instead of 512 bits.
	  OpenSSL 1.0.1 rejects 512 bits RSA key for TLS1.2 with SHA512.
	  http://rt.openssl.org/Ticket/Display.html?id=2769&user=guest&pass=guest
	  reported by Bohuslav Kabrda.
	  [ruby-core:43844] [ruby-trunk - Bug #6221]

Sat May 19 14:41:45 2012  Tanaka Akira  <akr@fsij.org>

	* test/drb/drbtest.rb: rescue Errno::ESRCH for Process.kill.
	  reported by NARUSE, Yui.  [ruby-dev:45551]

Sat May 19 14:41:09 2012  Tanaka Akira  <akr@fsij.org>

	* lib/drb/extservm.rb (DRb::ExtServManager): don't use /bin/sh to
	  invoke service subprocess.  mark detach threads for clean up.

	* test/drb/drbtest.rb: clean up the service subprocess in teardown.

	* test/drb/test_drb.rb: set @service_name for teardown.

	* test/drb/test_drbunix.rb: ditto.

	* test/drb/test_drbssl.rb: ditto.

Sat May 19 14:40:49 2012  Tanaka Akira  <akr@fsij.org>

	* lib/drb/ssl.rb: close accepted TCP socket if SSL accept is failed.
	  [ruby-dev:45541]

Sat May 19 14:39:50 2012  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/utils.rb: fix fcntl call.

	* lib/drb/unix.rb: ditto.

Fri May 18 18:13:44 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#configuration): keep space at end of
	  OUTFLAG and COUTFLAG.  [ruby-dev:45650]

Fri May 18 00:04:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_fstat, rb_w32_fstati64): convert FILETIME
	  to time_t directly, not to be affected by TZ unnecessarily.
