@@ -1,10 +1,10 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 226
+#define RUBY_PATCHLEVEL 227
 
-#define RUBY_RELEASE_DATE "2012-05-21"
+#define RUBY_RELEASE_DATE "2012-05-25"
 #define RUBY_RELEASE_YEAR 2012
 #define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 21
+#define RUBY_RELEASE_DAY 25
 
 #include "ruby/version.h"
 
